--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,17 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
+- task: AzureWebApp@1
+  inputs:
+    azureSubscription: 'Visual Studio Enterprise (de16f392-894f-496e-abf1-7453e9ba0b9f)'
+    appType: 'webApp'
+    appName: 'DASTAL'
+    deployToSlotOrASE: true
+    resourceGroupName: 'IOT_ASHOTEST'
+    slotName: 'production'
+    package: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    appSettings: '-ServerName "TCP:10.80.20.25,1433" -password "password@123" -DB "i_facility_tal" -Schema "dbo" -username "sa" -databasename "i_facility_tal.dbo"'
+    deploymentMethod: 'auto'
 - task: NuGetToolInstaller@1
 
 - task: NuGetCommand@2
